Made some changes

--- a/chat.html
+++ b/chat.html
@@ -9,6 +9,7 @@
 	<script src="jquery.tmpl.min.js"></script>
 	<script src="jQuery.url.js"></script>
 	<script src="main.js"></script>
+	<script src="http://www.bitstorm.org/jquery/shadow-animation/archive/jquery.animate-shadow-min.js"></script>
 </head>
 <body>
 	
@@ -31,13 +32,16 @@
 		<li>Fling it to this page</li>
 	</ol>
 	
+	<div id="result"></div>
+	
 	<div id="bigCanvasArea" style="margin:0 auto;width:800px;height:700px;background:#fff;color:#000">
 		
 		<div class="myImage"></div>
 
 	</div>
 	
-	<div id="container" style="display:none;">
+	
+	<div id="container">
 		<div class="header">
 			<div class="userContainer">
 				<span class="label">Username: </span>
@@ -71,6 +75,8 @@
 
 			<hr/>
 		</div>
+		
+		
 		
 		
 	</div>
