updated it so multiple users can join

--- a/chat.html
+++ b/chat.html
@@ -32,7 +32,7 @@
 		<li>Fling it to this page</li>
 	</ol>
 	
-	<div id="result"></div>
+	<!-- <div id="result"></div> -->
 	
 	<div id="bigCanvasArea" style="margin:0 auto;width:800px;height:700px;background:#fff;color:#000">
 		
@@ -41,7 +41,7 @@
 	</div>
 	
 	
-	<div id="container">
+	<div id="container" style="display:none">
 		<div class="header">
 			<div class="userContainer">
 				<span class="label">Username: </span>
